# jsonrpc-fdpass-go

./: go.mod  go.sum  transport_test.go
.github/workflows/: ci.yml
examples/echo/: main.go
tests-integration/: Cargo.toml  integration_test.go
