[package]
name = "jsonrpc-fdpass-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jsonrpc-fdpass = { git = "https://github.com/cgwalters/jsonrpc-fdpass" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustix = { version = "1", features = ["pipe"] }
